infra/k8s/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: connect-career
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:latest
          ports:
            - name: proxy
              containerPort: 8000
            - name: admin
              containerPort: 8001
          volumeMounts:
            - name: kong-config
              mountPath: /kong
              readOnly: true
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
            items:
              - key: kong.yml
                path: kong.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: connect-career
spec:
  type: NodePort
  selector:
    app: kong
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
      nodePort: 32080
    - name: admin
      port: 8001
      targetPort: 8001
      nodePort: 32081
